--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
   <!-- Nueva sección -->
   <section class="info-section">
-    <img src="../Images/gorillaz.jpg" alt="Miembros de Gorillaz">
+    <img src="Images/gorillaz.jpg" alt="Miembros de Gorillaz">
     <div class="text-row">
       <p>
         Gorillaz es una banda virtual británica creada en 1998 por Damon 
