--- a/QuerosenoCerillaBoom.html
+++ b/QuerosenoCerillaBoom.html
@@ -158,7 +158,7 @@
 
   <!-- Nueva sección -->
   <section class="info-section">
-    <img src="../Images/Mesa de trabajo 1.jpg" alt="Miembros de Gorillazzzz">
+    <img src="Images/Mesa de trabajo 1.jpg" alt="Miembros de Gorillazzzz">
     <div class="highlight-paragraph">
       <p>
         doc escapó con Cyborg Noodle en un submarino, pero fue capturado por EMI. Para ser liberado, aceptó como condición reunir de nuevo a la banda y lanzar un nuevo álbum de Gorillaz, por lo que regresó a Inglaterra con ese objetivo.</p>
@@ -181,7 +181,7 @@
     En medio del éxito, Murdoc fue arrestado por un crimen no especificado y enviado a prisión. Este giro inesperado provocó incertidumbre en la banda, aunque el proyecto musical continuó su curso con nuevas direcciones creativas.
 </P>
   <P class="highlight-paragraph">Tras el éxito de Humanz en 2017, Gorillaz decidió mantener su impulso creativo y lanzar un nuevo álbum en 2018 titulado The Now Now. Durante la gira de Humanz, Murdoc fue arrestado, por lo que la banda reclutó a Ace D. Copular, líder de The Gangreen Gang de The Powerpuff Girls, como su reemplazo temporal en el bajo. Noodle, fan de la serie en su infancia, apoyó su incorporación mientras la banda continuaba de gira y grababa el nuevo disco.</P>
-<img src="../Images/4c6428854f43f87a5b7fdc13b75e21a6.jpg" alt="Miembros de GorillazzzZ">
+<img src="Images/4c6428854f43f87a5b7fdc13b75e21a6.jpg" alt="Miembros de GorillazzzZ">
     <div class="text-row">
 <P class="highlight-paragraph">Se supo que Murdoc estaba encarcelado en la prisión británica Wormwood Scrubs, luego de haber sido incriminado por El Mierda, con quien había hecho negocios oscuros en el video de Strobelite. Mientras tanto, la banda seguía activa con sus proyectos y su nueva alineación temporal, dando continuidad a su música y actuaciones en vivo.
     Paralelamente, surgió la campaña interactiva #FreeMurdoc, donde los fans podían comunicarse con Murdoc a través de Messenger para ayudarlo a escapar de prisión. Murdoc enfrentó a otros prisioneros y fingió su muerte para generar drama, llamar la atención.
